# pegmd

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: error.rs  html.rs  lib.rs  markdown.pest  parser.rs  v2.rs
src/ast/: macros.rs  mod.rs  model.rs  traversal.rs
src/transformer/: html.rs  mod.rs
test_data/: blocks.md  lists.md  markup.md
test_data/ast_json/: blocks.json  lists.json  markup.json
test_data/html/: blocks.html  lists.html  markup.html
test_data/markdown/: blocks.md  lists.md  markup.md
