[package]
name = "pegmd"
version = "0.2.2"
authors = [ "Matthew Dickson <hi@mattdickson.io>" ]
edition = "2021"
description = "A PEG based markdown parser for creating an Abstract Syntax Tree"
readme = "README.md"
repository = "https://github.com/mdd36/pegmd"
license = "MIT"
categories = [ "parser-implementations" ]
keywords = [ "markdown", "peg" ]
exclude = [ "test_data" ]

[dependencies]
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1", features = [ "derive" ], optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0"


[features]
default = []
serde_support = [ "dep:serde" ]
html = []